@@ -12,6 +12,10 @@ General:
  * Try to not fail when writing UTF po files with old Perl versions
    (GitHub's #495) [Ineiev].
 
+Documentation:
+ * Fix the doc of TransTractor::read() now that the refname is mandatory
+   (GitHub's #504, also involved in Debian's #1072760)
+
 Translations:
  * Updated: Serbian & Serbian (cyrillic), thanks Ivan Pesic.
  * Updated: Spanish, thanks gallegonovato.
